7000578: CMS: assert(SafepointSynchronize::is_at_safepoint()) failed: Else races are possible

Weakened assert in onj_is_alive() to allow its use at initialization time when is_at_safepoint() normally reports false; added some related asserts to check order of is_init_completed() after Universe::is_fully_initialized().

Reviewed-by: jcoomes